--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "lola",
+  "name": "new-moat-discord",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "buffered-reader": "^1.0.1",
     "cleverbot-as-promised": "^1.0.2",
+    "crc": "^3.8.0",
     "discord.js": "github:discordjs/discord.js#11.3.2",
     "discord.js-commando": "github:FootsiesPajamies/bot-framework",
     "erlpack": "github:discordapp/erlpack",
     "express": "^4.16.3",
+    "filesize": "^4.1.2",
+    "fs-extra": "^8.0.1",
     "ftp-deploy": "^2.3.0",
+    "long": "^4.0.0",
+    "lzma-native": "^4.0.5",
     "mathjs": "^5.1.2",
+    "moment": "^2.24.0",
     "mysql": "^2.15.0",
     "node-fetch": "^2.2.0",
+    "q": "^1.5.1",
+    "request": "^2.88.0",
     "require-dir": "^1.0.0",
     "sqlite": "^2.9.2",
     "sqlite3": "^4.0.1",
